Update and rename README.html to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<h1>PAGINATION HELPER</h1>
+PAGINATION HELPER
 PaginationHelper  used for implementation of pagination UI components and a set of Unit tests to properly test it.
 
 TECHNOLOGIES
